# sagittarius-legislation-crawler

./: bentuk.tsv  entitas.tsv  jenis.json  locales.json  pyproject.toml  result.json  result_2.json  result_3.json  sagittarius-scrape-list.csv  sagittarius-scrape-list.json
sagittarius_legislation_crawler/: get_jenis.py  graph.py  mod.py  perbup.py  result_sort.py  test_jenis.py
